--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -10,7 +10,7 @@
     <mat-card *ngIf="dish">
         <mat-card-header>
             <mat-card-title>
-                <h3>{{dish.name | uppercase}}</h3>
+                <h3 *ngIf="dish">{{dish.name | uppercase}}</h3>
             </mat-card-title>
         </mat-card-header>
         <img mat-card-image src={{dish.image}} alt={{dish.name}}>
@@ -23,6 +23,9 @@
             <button mat-button (click)="goBack()">BACK</button>
         </mat-card-actions>
     </mat-card>
+    <div [hidden]="dish">
+        <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+      </div>
 </div>
 
   <div fxFlex="40">
@@ -33,6 +36,9 @@
             <p matLine>-- {{ comms.author}} {{comms.date | date}}</p>
         </mat-list-item>   
     </mat-list>
+    <div [hidden]="dish">
+        <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+      </div>
   </div>
 
 </div>
