--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,6 +18,9 @@
     </p>
   </mat-card-content>
 </mat-card>
+<div [hidden]="dish">
+  <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+</div>
 
 <mat-card *ngIf="promotion" fxFlex>
   <mat-card-header>
@@ -32,6 +35,9 @@
     </p>
   </mat-card-content>
 </mat-card>
+<div [hidden]="promotion">
+  <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+</div>
 
 <mat-card *ngIf="featuredLeader" fxFlex>
   <mat-card-header>
@@ -45,6 +51,9 @@
     <p>{{featuredLeader.description}}
     </p>
   </mat-card-content>
+  <div [hidden]="featuredLeader">
+    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
 </mat-card>
 
 </div>
