assignment 3 commit minor form text change

--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -64,7 +64,7 @@
             </p>
           <p>
             <mat-form-field class="full-width">
-              <textarea matInput formControlName="comment" placeholder="Your Feedback" rows=12 required></textarea>
+              <textarea matInput formControlName="comment" placeholder="Your Comment" rows=12 required></textarea>
             </mat-form-field>
           </p>
           <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="cform.form.invalid">Submit</button>
