--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -8,7 +8,7 @@
                     <h3 *ngIf="dish">{{dish.name | uppercase}}</h3>
                 </mat-card-title>
             </mat-card-header>
-            <img mat-card-image src={{dish.image}} alt={{dish.name}}>
+            <img mat-card-image src="{{ baseURL + dish.image }}" alt={{dish.name}}>
             <mat-card-content>
                 <p>{{dish.description}}</p>
             </mat-card-content>
@@ -24,11 +24,15 @@
             </mat-card-actions>
         </mat-card>
 
-        <div [hidden]="dish">
+        <div [hidden]="dish || disherrMess">
             <mat-spinner></mat-spinner>
             <h4>Loading . . . Please Wait</h4>
         </div>
     </div>
+    <div fxFlex *ngIf="disherrMess">
+        <h2>Error</h2>
+        <h4>{{disherrMess}}</h4>
+      </div>
 
     <div fxFlex="40" *ngIf="dish">
         <mat-list>
