--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,7 +33,7 @@
       <h3>{{promotion.name | uppercase}}</h3>
     </mat-card-title>
   </mat-card-header>
-  <img mat-card-image src={{promotion.image}} alt={{promotion.name}}>
+  <img mat-card-image src="{{ baseURL + promotion.image }}" alt={{promotion.name}}>
   <mat-card-content>
     <p>{{promotion.description}}
     </p>
@@ -50,7 +50,7 @@
       <h3>{{featuredLeader.name | uppercase}}</h3>
     </mat-card-title>
   </mat-card-header>
-  <img mat-card-image src={{featuredLeader.image}} alt={{featuredLeader.name}}>
+  <img mat-card-image src="{{ baseURL + featuredLeader.image }}" alt={{featuredLeader.name}}>
   <mat-card-content>
     <p>{{featuredLeader.description}}
     </p>
