--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -56,16 +56,21 @@
 
   <div fxFlex>
     <h2>Corporate Leadership</h2>
-    
-    
-    <mat-list *ngFor="let leader of leaders">
-    <mat-list-item>
+    <mat-list *ngIf="leaders" [@expand]>
+    <mat-list-item *ngFor="let leader of leaders">
+      <img mat-list-avatar src="{{ baseURL + leader.image }}" alt="{{ leader.abbr }}">
         <h4 matLine>{{ leader.name }} {{ leader.abbr }}</h4>
         <p matLine>{{ leader.designation }}</p>
         <p matLine>{{ leader.description }}</p>
     </mat-list-item>
     </mat-list>
-
+    <div [hidden]="leaders || leadererrMess">
+      <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
+    <div fxFlex *ngIf="leadererrMess">
+      <h2>Error</h2>
+      <h4>{{leadererrMess}}</h4>
+    </div>
 
   </div>
 </div>
