Final Assessment commit

--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -77,7 +77,7 @@
                   <textarea matInput formControlName="comment" placeholder="Your Comment" rows=12 required></textarea>
                 </mat-form-field>
               </p>
-              <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="cform.form.invalid">Submit</button>
+              <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="cform.invalid">Submit</button>
             </form>
           <!--</div>-->
     </div>
