--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,16 +1,14 @@
-<div class="container"
-  fxLayout="column"
-  fxLayoutGap="10px">
+<div class="container" fxLayout="column" fxLayoutGap="10px">
 
   <div fxFlex>
     <div>
-        <h3>Contact Us</h3>
-        <hr>
+      <h3>Contact Us</h3>
+      <hr>
     </div>
   </div>
 
   <div fxFlex>
-    <h3>Location Information</h3> 
+    <h3>Location Information</h3>
     <div fxLayout="column" fxLayout.gt-sm="row">
       <div fxFlex="50" fxFlexOffset="20px">
         <h4>Our Address</h4>
@@ -20,8 +18,8 @@
           HONG KONG<br>
           <i class="fa fa-phone"></i>: +852 1234 5678<br>
           <i class="fa fa-fax"></i>: +852 8765 4321<br>
-          <i class="fa fa-envelope"></i>: 
-                <a href="mailto:confusion@food.net">confusion@food.net</a>
+          <i class="fa fa-envelope"></i>:
+          <a href="mailto:confusion@food.net">confusion@food.net</a>
         </address>
         <p></p>
         <div>
@@ -29,7 +27,7 @@
           <a mat-raised-button><i class="fa fa-skype"></i> Skype</a>
           <a mat-raised-button href="mailto:confusion@food.net"><i class="fa fa-envelope-o"></i> Email</a>
         </div>
-        </div>
+      </div>
       <div fxFlex="40">
         <h4>Map of our Location</h4>
       </div>
@@ -38,48 +36,72 @@
 
   <div fxFlex fxFlexOffset="20px" class="form-size">
     <h3>Send us your Feedback</h3>
-    <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
-
-    <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()">
-      <p>
-        <mat-form-field class="half-width">
-          <input matInput formControlName="firstname" placeholder="First Name" type="text" required>
-          <mat-error *ngIf="formErrors['firstname']">{{formErrors['firstname']}}</mat-error>
-        </mat-form-field>
-        <mat-form-field class="half-width">
-          <input matInput formControlName="lastname" placeholder="Last Name" type="text" required>
-          <mat-error *ngIf="formErrors['lastname']">{{formErrors['lastname']}}</mat-error>
-        </mat-form-field>
-      </p>
-      <p>
-        <mat-form-field class="half-width">
-          <input matInput formControlName="telnum" placeholder="Tel. Number" type="tel" pattern="[0-9]*" required>
-          <mat-error *ngIf="formErrors['telnum']">{{formErrors['telnum']}}</mat-error>
-        </mat-form-field>
-        <mat-form-field class="half-width">
-          <input matInput formControlName="email" placeholder="Email" type="email" email required>
-          <mat-error *ngIf="formErrors['email']">{{formErrors['email']}}</mat-error>
-        </mat-form-field>
-      </p>
-      <table class="form-size">
-        <td>
-          <mat-slide-toggle formControlName="agree">May we contact you?</mat-slide-toggle>
-        </td>
-        <td>
-          <mat-select placeholder="How?" formControlName="contacttype">
-            <mat-option *ngFor="let ctype of contactType" [value]="ctype">
-              {{ ctype }}
-            </mat-option>
-          </mat-select>
-        </td>
+    <!--<p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>-->
+  </div>
+  <div [ngSwitch]="visibility">
+    <div fxFlex fxFlexOffset="20px" class="form-size" *ngSwitchCase="'preSubmit'">
+      <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+        <p>
+          <mat-form-field class="half-width">
+            <input matInput formControlName="firstname" placeholder="First Name" type="text" required>
+            <mat-error *ngIf="formErrors['firstname']">{{formErrors['firstname']}}</mat-error>
+          </mat-form-field>
+          <mat-form-field class="half-width">
+            <input matInput formControlName="lastname" placeholder="Last Name" type="text" required>
+            <mat-error *ngIf="formErrors['lastname']">{{formErrors['lastname']}}</mat-error>
+          </mat-form-field>
+        </p>
+        <p>
+          <mat-form-field class="half-width">
+            <input matInput formControlName="telnum" placeholder="Tel. Number" type="tel" pattern="[0-9]*" required>
+            <mat-error *ngIf="formErrors['telnum']">{{formErrors['telnum']}}</mat-error>
+          </mat-form-field>
+          <mat-form-field class="half-width">
+            <input matInput formControlName="email" placeholder="Email" type="email" email required>
+            <mat-error *ngIf="formErrors['email']">{{formErrors['email']}}</mat-error>
+          </mat-form-field>
+        </p>
+        <table class="form-size">
+          <td>
+            <mat-slide-toggle formControlName="agree">May we contact you?</mat-slide-toggle>
+          </td>
+          <td>
+            <mat-select placeholder="How?" formControlName="contacttype">
+              <mat-option *ngFor="let ctype of contactType" [value]="ctype">
+                {{ ctype }}
+              </mat-option>
+            </mat-select>
+          </td>
         </table>
-      <p>
-        <mat-form-field class="full-width">
-          <textarea matInput formControlName="message" placeholder="Your Feedback" rows=12></textarea>
-        </mat-form-field>
-      </p>
-      <button type="submit" mat-button class="background-primary text-floral-white">Submit</button>
-    </form>
+        <p>
+          <mat-form-field class="full-width">
+            <textarea matInput formControlName="message" placeholder="Your Feedback" rows=12></textarea>
+          </mat-form-field>
+        </p>
+        <button type="submit" mat-button class="background-primary text-floral-white"
+          [disabled]="fform.invalid">Submit</button>
+      </form>
+    </div>
+    <div fxFlex fxFlexOffset="20px" class="form-size" *ngSwitchCase="'postSubmit'">
+      <div [hidden]=" feedback || feederrMess" [@expand]>
+        <mat-spinner></mat-spinner>
+        <h4>Submitting Form</h4>
+      </div>
+      <div fxFlex *ngIf="feederrMess">
+        <h2>Error</h2>
+        <h4>{{feederrMess}}</h4>
+      </div>
+      <div fxFlex *ngIf="feedback!=undefined" [@expand]>
+        <h4>Your Submission</h4>
+        <mat-list>
+          <mat-list-item>firstname {{ feedback.firstname }}</mat-list-item>
+          <mat-list-item>lastname {{ feedback.lastname }}</mat-list-item>
+          <mat-list-item>Telephone {{ feedback.telnum }}</mat-list-item>
+          <mat-list-item>email {{ feedback.email }}</mat-list-item>
+          <mat-list-item>feeback {{ feedback.message }}</mat-list-item>
+        </mat-list>
+      </div>
+    </div>
   </div>
 
 </div>
