--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,14 +11,14 @@
   <mat-dialog-content>
     <p>
       <mat-form-field>
-        <input matInput placeholder="Username" type="text" [(ngModel)]="user.username" name="username"  #username="ngModel" required>
-        <mat-error *ngIf="username.errors?.['required']">Username is required</mat-error>
+        <input matInput placeholder="Username" type="text" [(ngModel)]="user.id" name="username"  #id="ngModel" required>
+        <mat-error *ngIf="id.errors?.['required']">Username is required</mat-error>
       </mat-form-field>
       <mat-form-field>
         <input matInput placeholder="Password" type="password" [(ngModel)]="user.password" name="password" #password="ngModel" required>
         <mat-error *ngIf="password.errors?.['required']">Password is required</mat-error>
       </mat-form-field>
-      <mat-checkbox [(ngModel)]="user.remember" name="remember">Remember Me</mat-checkbox>
+      <!--<mat-checkbox [(ngModel)]="user.remember" name="remember">Remember Me</mat-checkbox>-->
     </p>
   </mat-dialog-content>
   <mat-dialog-actions>
