--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,28 @@
-<p>register works!</p>
+<form novalidate [formGroup]="registerForm" #rform="ngForm" (ngSubmit)="onSubmit()">
+    <p>
+      <mat-form-field class="half-width">
+        <input matInput formControlName="firstname" placeholder="First Name" type="text" required>
+        <mat-error *ngIf="formErrors['firstname']">{{formErrors['firstname']}}</mat-error>
+      </mat-form-field>
+      <mat-form-field class="half-width">
+        <input matInput formControlName="lastname" placeholder="Last Name" type="text" required>
+        <mat-error *ngIf="formErrors['lastname']">{{formErrors['lastname']}}</mat-error>
+      </mat-form-field>
+    </p>
+    <p>
+      <mat-form-field class="half-width">
+        <input matInput formControlName="telnum" placeholder="Tel. Number" type="tel" pattern="[0-9]*" required>
+        <mat-error *ngIf="formErrors['telnum']">{{formErrors['telnum']}}</mat-error>
+      </mat-form-field>
+      <mat-form-field class="half-width">
+        <input matInput formControlName="email" placeholder="Email" type="email" email required>
+        <mat-error *ngIf="formErrors['email']">{{formErrors['email']}}</mat-error>
+      </mat-form-field>
+    </p>
+    <p>
+        <input matInput formControlName="password" placeholder="Password" type="password" pattern="[A-Za-z0-9]{6,12}" required>
+        <mat-error *ngIf="formErrors['password']">{{formErrors['password']}}</mat-error>
+    </p>
+    <button type="submit" mat-button class="background-primary text-floral-white"
+      [disabled]="rform.invalid">Register</button>
+  </form>
